# api/docs/swagger.json
@@ -32,6 +32,23 @@
                 }
             }
         },
+        "/logup": {
+            "post": {
+                "summary": "Create account",
+                "parameters": [
+                    {
+                        "description": "Account data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.LogupDto"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/me": {
             "get": {
                 "summary": "See current user",
@@ -54,6 +71,25 @@
                 "username"
             ],
             "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.LogupDto": {
+            "type": "object",
+            "required": [
+                "name",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
